Scrubbing Timeline in VSE with Jack Audio doesn't scrub just plays the audio track #24051

Closed
opened 2010-09-28 23:23:11 +02:00 by yellow .... · 11 comments

%%%Using Jack audio, an mp3 and scrubbing enabled doesn't scrub, it just continues the playing of the audio track. Dragging the play head back and forth repeatedly plays the track from where it's at, it doesn't even relate to the point on the time line of the audio.

Build Revision: 32105M from svn.

64bit Linux Maverick Merekat
FFMPEG from svn

USB Creative Audigy soundcard. 42msec latency.%%%

%%%Using Jack audio, an mp3 and scrubbing enabled doesn't scrub, it just continues the playing of the audio track. Dragging the play head back and forth repeatedly plays the track from where it's at, it doesn't even relate to the point on the time line of the audio. Build Revision: 32105M from svn. 64bit Linux Maverick Merekat FFMPEG from svn USB Creative Audigy soundcard. 42msec latency.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Scrubs much better cached :-)%%%

%%%Scrubs much better cached :-)%%%
Member

%%%Assigning to our sound man.%%%

%%%Assigning to our sound man.%%%
Member

%%%I bet it's the mp3 file! ffmpeg has problems with specific mp3 files with problematic headers so that it's unable to seek within the file. Could you please attach the problematic mp3 file, so that I can check?%%%

%%%I bet it's the mp3 file! ffmpeg has problems with specific mp3 files with problematic headers so that it's unable to seek within the file. Could you please attach the problematic mp3 file, so that I can check?%%%
Author

%%%hi

Link to file Windcatcher.mp3 download.

http://www.jamendo.com/en/album/49758

OpenAL scrubs the mp3 fine, but Jack can't.
%%%

%%%hi Link to file Windcatcher.mp3 download. http://www.jamendo.com/en/album/49758 OpenAL scrubs the mp3 fine, but Jack can't. %%%
Member

%%%Hmm, I'm sorry, looks like I didn't read the description precisely enough.

For me the file works perfectly.

Could you please try SDL as audio backend, SDL and Jack use the same software mixing code while OpenAL has its own, maybe that helps isolating the problem.%%%

%%%Hmm, I'm sorry, looks like I didn't read the description precisely enough. For me the file works perfectly. Could you please try SDL as audio backend, SDL and Jack use the same software mixing code while OpenAL has its own, maybe that helps isolating the problem.%%%
Author

%%%Hi

No apologies necessary for misreading, really appreciate your work on blender sound system. :-)

SDL scrubs fine too.

I'm using jackdmp 1.9.6 on a dual Xeon processors workstation.

I get a couple of errors when starting jackd.

Cannot create thread 1 Operation not permitted
Cannot create thread 1 Operation not permitted

Have no idea if that relates to problem. Although Jack seems to work fine for Ardour etc.

Thanks%%%

%%%Hi No apologies necessary for misreading, really appreciate your work on blender sound system. :-) SDL scrubs fine too. I'm using jackdmp 1.9.6 on a dual Xeon processors workstation. I get a couple of errors when starting jackd. Cannot create thread 1 Operation not permitted Cannot create thread 1 Operation not permitted Have no idea if that relates to problem. Although Jack seems to work fine for Ardour etc. Thanks%%%
Member

%%%I think I could reproduce the problem! Do you have AV-sync on? With it I seem to have the same problem, will look into it.%%%

%%%I think I could reproduce the problem! Do you have AV-sync on? With it I seem to have the same problem, will look into it.%%%
Author

%%%Yes, AVSync is on.%%%

%%%Yes, AVSync is on.%%%
Member

%%%Fixed in revision 32256, thanks for reporting.%%%

%%%Fixed in revision 32256, thanks for reporting.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#24051
No description provided.