Fix for [#24051] Scrubbing Timeline in VSE with Jack Audio doesn't scrub just plays the audio track

There were actually two bugs, the one reported and that the Sync Callback never has been called after someone had to add #ifdefs around the call without checking that the build systems are even configured to add the needed definition, am I right Cam? :P